# spot-detector

./: .gitignore  README.md  pyproject.toml
spot-detector/: file_utils.py  image_process.py  k_means_utils.py  main.py  old_code.py  process_chains.py  tests.py
spot_detector/: __main__.py  cli.py  commands.py  config.py  core.py  file_utils.py  image_process.py  k_means_utils.py  main.py  misc.py  multi_core.py  palette_gui.py  process_chains.py  transformations.py  types.py
spot_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spot_detector/commands/: detector.py  filter_background.py  palette_editor.py  remove_hot_pixels.py
spot_detector/gui/: config_widget.py  image_view.py  main_window.py
spot_detector/model/: models.py
tests/: color_and_detection.toml  quick_kmean.py  test_suite_1.py
