[project]
name="spot-detector"
version = "2024.1.0"
requires-python = ">= 3.11"
dependencies = ["opencv-python>=4.9.0.80",
				"numpy>=1.26.3",
				"scipy>=1.11.4",
				"pydantic>=2.5.3",
				"click>=8.1.7",
				"tomlkit>=0.11.3"]
authors = [{name = "Louis Lanoy", email = "louis.lanoy@icloud.com"}]
description = """
FR: Une application en CLI configurable qui compte les points dans des images
en fonction de leur couleur et de leur forme. Elle range les résultats dans un
fichier csv. Elle est également doté d'un outil en interface graphique pour
configurer certains paramètres de couleur.
"""
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Peanut-XIV/spot-detector"
Issues = "https://github.com/Peanut-XIV/spot-detector/issues"

[project.scripts]
spot-detector = "spot_detector.__main__:cli"


[build-system]
requires = ["setuptools>=61.0", "opencv-python", "numpy",
			"scipy", "pydantic", "click", "tomlkit"]
build-backend = "setuptools.build_meta"

[tool.pylint.main]
init-hook = """
try:
	import pylint_venv
except ImportError:
	pass
else:
	pylint_venv.inithook()
"""
extension-pkg-allow-list = ["cv2"]
generated-member = ["cv.*"]
disable = ["E1136"]

[tool.mypy]
python_executable = "./venv/bin/python"
